--- a/MvcBackbone/Views/Album/Index.cshtml
+++ b/MvcBackbone/Views/Album/Index.cshtml
@@ -1,5 +1,27 @@
 ﻿@{
-    ViewBag.Title = "Index";
+    Layout = null;
 }
 
-<h2>Index</h2>
+<!DOCTYPE html>
+
+<html>
+<head>
+    <title>Index</title>
+	<link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
+	<link href="@Url.Content("~/Content/todo.css")" rel="stylesheet" type="text/css" />
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
+	<script src ="http://ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js"></script>
+	<script src="../../Scripts/underscore.js" type="text/javascript"></script>
+    <script src="../../Scripts/backbone.js" type="text/javascript"></script>
+	<script src="../../Scripts/album.js" type="text/javascript"></script>
+</head>
+    <body>
+        
+        
+        
+        
+        
+        
+         
+    </body>
+</html>
