--- a/MvcBackbone/Views/Album/Index.cshtml
+++ b/MvcBackbone/Views/Album/Index.cshtml
@@ -7,21 +7,25 @@
 <html>
 <head>
     <title>Index</title>
-	<link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
-	<link href="@Url.Content("~/Content/todo.css")" rel="stylesheet" type="text/css" />
+	<link href="@Url.Content("~/Content/screen.css")" rel="stylesheet" type="text/css" />
+	<link href="@Url.Content("~/Content/fancypants.css")" rel="stylesheet" type="text/css" />
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
 	<script src ="http://ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js"></script>
 	<script src="../../Scripts/underscore.js" type="text/javascript"></script>
     <script src="../../Scripts/backbone.js" type="text/javascript"></script>
 	<script src="../../Scripts/album.js" type="text/javascript"></script>
+    <script type="text/template" id="album-template">
+        <span class="album-title"><%= title %></span>
+        <span class="artist-name"><%= artist %></span>
+        <ol class="tracks">
+        <% _.each(tracks, function(track) { %>
+            <li><%= track.title %></li>
+        <% }); %>
+        </ol>
+    </script>
 </head>
-    <body>
-        
-        
-        
-        
-        
-        
-         
+    <body> 
+        <div id="container">
+        </div> 
     </body>
 </html>
