--- a/MvcBackbone/Views/Album/Index.cshtml
+++ b/MvcBackbone/Views/Album/Index.cshtml
@@ -13,7 +13,7 @@
 	<script src ="http://ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.min.js"></script>
 	<script src="../../Scripts/underscore.js" type="text/javascript"></script>
     <script src="../../Scripts/backbone.js" type="text/javascript"></script>
-	<script src="../../Scripts/album.js" type="text/javascript"></script>
+	<script src="../../Scripts/Tunes.js" type="text/javascript"></script>
     <script type="text/template" id="album-template">
         <span class="album-title"><%= title %></span>
         <span class="artist-name"><%= artist %></span>
